ReadableStream's pipeTo() and pipeThrough() don't properly check for AbortSignal https://bugs.webkit.org/show_bug.cgi?id=227693

Reviewed by Sam Weinig.

LayoutTests/imported/w3c:

* web-platform-tests/streams/piping/abort.any-expected.txt:
* web-platform-tests/streams/piping/abort.any.worker-expected.txt:
* web-platform-tests/streams/piping/pipe-through.any-expected.txt:
* web-platform-tests/streams/piping/pipe-through.any.worker-expected.txt:

Source/WebCore:

This patch introduces @isAbortSignal global private function to replace `instanceof`
checks that a) were false positive for `Object.create(AbortSignal.prototype)` and
b) observably performed [[GetPrototypeOf]] and Symbol.hasInstance lookup / call.

Aligns WebKit with Blink and the spec (https://heycam.github.io/webidl/#implements).

Test: imported/w3c/web-platform-tests/streams/piping/abort.any.js

* Modules/streams/ReadableStream.js:
(pipeThrough):
(pipeTo):
* Modules/streams/ReadableStreamInternals.js:
(readableStreamPipeToWritableStream):
* bindings/js/JSDOMGlobalObject.cpp:
(WebCore::JSC_DEFINE_HOST_FUNCTION):
(WebCore::JSDOMGlobalObject::addBuiltinGlobals):
* bindings/js/WebCoreBuiltinNames.h:


Canonical link: https://commits.webkit.org/240240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280627 268f45cc-cd09-0410-ab3c-d52691b4dbfc